--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^15.11.2",
-    "@types/node": "^10.10.1"
+    "@types/node": "^10.10.1",
+    "@types/shelljs": "^0.8.0",
+    "shelljs": "^0.8.2"
   }
 }
