Move github PRs file to its own file
I'll probably use index.js for something else

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "measure",
   "version": "1.0.0",
   "description": "Measure precision/recall of Typescript PRs",
-  "main": "index.js",
+  "main": "githubPrs.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
