Add error counting code
It's halfway there or so

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
       "prs": "node githubPrs.js",
       "errors": "node errors.js",
-      "anys": "node anys.js",
+      "anys": "node anys.js"
   },
   "author": "",
   "license": "ISC",
