Fix dynamic require of typescript
Also lots more features, types and refactoring

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
         "module": "commonjs",
     },
     "files": [
+        "types.d.ts",
+        "measure.js",
         "githubPrs.js",
         "errors.js",
         "anys.js",
