Add refactorAll code
Needs to be deduped and refactored but it works so far.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,10 @@
     "files": [
         "types.d.ts",
         "measure.js",
-        "outputCsv.js",
-        "githubPrs.js",
         "errors.js",
         "anys.js",
+        "outputCsv.js",
+        "refactorAll.js",
+        "githubPrs.js",
     ]
 }
