--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
       "prs": "node githubPrs.js",
       "errors": "node errors.js",
-      "anys": "node anys.js"
+      "anys": "node anys.js",
+      "update-baselines": "cp -r ~/TypeScript/tests/cases/user ./"
   },
   "author": "",
   "license": "ISC",
