Count number of overloads in Definitely Typed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "measure.js",
         "errors.js",
         "anys.js",
+        "overloads.js",
         "outputCsv.js",
         "refactorAll.js",
         "githubPrs.js",
