Create experiments folder, add consecutiveJsdoc experiment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "measure.js",
         "errors.js",
         "anys.js",
-        "overloads.js",
+        "experiments/overloads.js",
+        "experiments/consecutivejsdoc.js",
         "outputCsv.js",
         "refactorAll.js",
         "githubPrs.js",
