--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Measure precision/recall of Typescript PRs",
   "main": "githubPrs.js",
   "scripts": {
-      "prs": "node githubPrs.js",
-      "errors": "node errors.js",
-      "anys": "node anys.js",
-      "update-baselines": "cp -r ~/TypeScript/tests/cases/user ./"
+    "prs": "node githubPrs.js",
+    "errors": "node errors.js",
+    "anys": "node anys.js",
+    "update-baselines": "cp -r ~/TypeScript/tests/cases/user ./"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,6 @@
     "@types/node": "^10.10.1",
     "@types/shelljs": "^0.8.0",
     "shelljs": "^0.8.2",
-    "typescript": "^3.0.3"
+    "typescript": "^3.6.0-dev.20190628"
   }
 }
