--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "anys.js",
         "experiments/overloads.js",
         "experiments/consecutiveJsdoc.js",
+        "experiments/grepsurvey.js",
         "outputCsv.js",
         "refactorAll.js",
         "githubPrs.js",
