--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "measure",
+  "type": "module",
   "version": "1.0.0",
   "description": "Measure precision/recall of Typescript PRs",
   "main": "githubPrs.js",
@@ -16,6 +17,6 @@
     "@types/node": "^10.17.29",
     "@types/shelljs": "^0.8.8",
     "shelljs": "^0.8.4",
-    "typescript": "^4.4.0-dev.20210520"
+    "typescript": "^5.6.3"
   }
 }
